Formatação da área de comunicados

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container-xxl">
 			<div class="row d-flex align-items-center">
 
-				<div class="col-9 col-md-4 logo">
+				<div class="col-9 col-md-4 logo"> 
 				    <nav class="navbar navbar-dark nav-principal">
 				    	<button class="navbar-toggler" type="button" data-bs-toggle="dropdown" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Toggle navigation">
 					        <span class="navbar-toggler-icon"></span>
@@ -118,74 +118,15 @@
 			</div>
 			<!-- Carousel - Fim-->
 
-			<!-- Dropdowns - Início -->
-			<div class="col-12 col-md-3 rounded comunicados d-flex flex-column justify-content-between">
-				<p class="acesse">Acesse:</p>
+			<!-- Comunicados - Início -->
+			<div class="col-12 col-md-3 rounded comunicados bg-light shadow-sm p-3">
+				<h2>Comunicados</h2>
 
-				<div class="btn-group shadow-sm mt-3">
-				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-				    Secretaria-executiva de Atenção Básica, Especialidades e Vigilância em Saúde
-				  </button>
-				  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
-				    <li><a class="dropdown-item" href="#">Coordenadoria de Atenção Básica (CAB)</a></li>
-				    <li><a class="dropdown-item" href="#">Departamento de Atenção Especializada</a></li>
-				    <li><a class="dropdown-item" href="#">Coordenadoria de Vigilância em Saúde (Covisa)</a></li>
-				    <li><a class="dropdown-item" href="#">Coordenadoria de IST/Aids</a></li>
-				    <li><a class="dropdown-item" href="#">Coordenadoria de Saúde e Proteção ao Animal Doméstico (Cosap)</a></li>
-				    <li><a class="dropdown-item" href="#">Coordenadorias Regionais de Saúde</a></li>
-				  </ul>
-				</div>
-
-				<div class="btn-group shadow-sm mt-3">
-				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-				    Secretaria-executiva de Atenção Hospitalar
-				  </button>
-				  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
-				    <li><a class="dropdown-item" href="#">Coordenadoria de Assistência Hospitalar</a></li>
-				    <li><a class="dropdown-item" href="#">Coordenadoria de Urgências e Emergências, que inclui o Serviço de Atendimento Móvel de Urgência (Samu)</a></li>
-				    <li><a class="dropdown-item" href="#">Doze hospitais sob gestão da administração direta</a></li>
-				  </ul>
-				</div>
-
-				<div class="btn-group shadow-sm mt-3">
-				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-				    Secretaria-executiva de Gestão Administrativa e Integrada
-				  </button>
-				  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
-				    <li><a class="dropdown-item" href="#">Coordenadoria de Finanças e Orçamento (CFO)</a></li>
-				    <li><a class="dropdown-item" href="#">Coordenadoria de Gestão de Pessoas (Cogep)</a></li>
-				    <li><a class="dropdown-item" href="#">Coordenadoria de Administração e Suprimentos (CAS)</a></li>
-				    <li><a class="dropdown-item" href="#">Divisão de Administração e Serviços de Apoio</a></li>
-				  </ul>
-				</div>
-
-				<div class="btn-group shadow-sm mt-3">
-				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-				    Secretaria Executiva de Regulação, Monitoramento, Avaliação e Parcerias
-				  </button>
-				  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
-				    <li><a class="dropdown-item" href="#">Coordenadoria de Parcerias e Contratação de Serviços de Saúde (CPCS)</a></li>
-				    <li><a class="dropdown-item" href="#">Coordenadoria de Avaliação e Controle da Assistência Complementar</a></li>
-				    <li><a class="dropdown-item" href="#">Coordenadoria de Regulação (Creg)</a></li>
-				    <li><a class="dropdown-item" href="#">Coordenadoria de Informação em Saúde</a></li>
-				    <li><a class="dropdown-item" href="#">Coordenadoria de Controle Interno</a></li>
-				    <li><a class="dropdown-item" href="#">Departamento de Apoio Técnico às Demandas Judiciais em Saúde</a></li>
-				  </ul>
-				</div>
-
-				<div class="btn-group shadow-sm mt-3">
-				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-				    Coordenadoria Jurídica (Cojur)
-				  </button>
-				  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
-				    <li><a class="dropdown-item" href="#">Departamento de Demandas Judiciais em Saúde e Atendimento a Órgãos de Controle</a></li>
-				    <li><a class="dropdown-item" href="#">Departamento de Assessoramento Jurídico</a></li>
-				    
-				  </ul>
-				</div>
+				
+				<a href="#" class="ver-todos">Ver todos</a>
 
 			</div>
-			<!-- Dropdowns - Fim -->
+			<!-- Comunicados - Fim -->
 		</div>
 
 		<!-- Boletins - Início -->
