Criação do Menu Horizontal

--- a/index.html
+++ b/index.html
@@ -12,31 +12,14 @@
 </head>
 <body>
 
-	<header class="">
+	<header class="site-header">
 		<div class="container-xxl">
 			<div class="row d-flex align-items-center">
 
 				<div class="col-9 col-md-4 logo"> 
-				    <nav class="navbar navbar-dark nav-principal">
-				    	<button class="navbar-toggler" type="button" data-bs-toggle="dropdown" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Toggle navigation">
-					        <span class="navbar-toggler-icon"></span>
-					    </button>
-
-					    <a href="#" class="brand">
-							<img src="img/logo-pmsp.svg">
-						</a>
-
-					    <ul class="dropdown-menu dropdown-menu-start text-small shadow" aria-labelledby="navbarsPrincipal">
-							<li><a class="dropdown-item" href="#">Home</a></li>
-							<li><a class="dropdown-item" href="#">Comunicados</a></li>
-							<li><a class="dropdown-item" href="#">Boletins</a></li>
-							<li><a class="dropdown-item" href="#">Nossos programas</a></li>
-							<li><a class="dropdown-item" href="#">Especial Saúde</a></li>
-							<li><a class="dropdown-item" href="#">Fala Gestor</a></li>
-							<li><a class="dropdown-item" href="#">Eventos</a></li>
-						</ul>
-					</nav>
-					
+			        <a href="#" class="brand">
+						<img src="img/logo-pmsp.svg">
+					</a>					
 				</div>
 
 				<div class="col-3 col-md-8 text-right"> 
@@ -85,6 +68,28 @@
 			</div>
 		</div>
 	</header>
+	<div class="menu-horizontal">
+		<div class="container-xxl">
+			 <nav class="navbar navbar-light nav-principal">
+		    	<button class="navbar-toggler" type="button" data-bs-toggle="dropdown" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Toggle navigation">
+			        <span class="navbar-toggler-icon"></span>Navegue pelas secretarias
+			    </button>
+
+			    <ul class=" text-small shadow">
+					<li><a class="dropdown-item" href="#">Home</a></li>
+					<li><a class="dropdown-item" href="#">Comunicados</a></li>
+					<li><a class="dropdown-item" href="#">Boletins</a></li>
+					<li><a class="dropdown-item" href="#">Nossos programas</a></li>
+					<li><a class="dropdown-item" href="#">Especial Saúde</a></li>
+					<li><a class="dropdown-item" href="#">Fala Gestor</a></li>
+					<li><a class="dropdown-item" href="#">Eventos</a></li>
+				</ul>
+			</nav>
+		</div>
+	</div>
+	<div class="mega-menu dropdown-menu dropdown-menu-start"aria-labelledby="navbarsPrincipal">
+
+	</div>
 	<main class="container-xxl">
 		<div class="row mt-3 mb-3">
 			<!-- Carousel - Inicio-->
