--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	<div class="menu-horizontal">
 		<div class="container-xxl">
 			 <nav class="navbar navbar-light nav-principal">
-		    	<button class="navbar-toggler" type="button" data-bs-toggle="dropdown" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Mega Menu">
+		    	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Mega Menu">
 			        <span class="navbar-toggler-icon"></span>
 			        <span class="navbar-toggler-name">Navegue pelas secretarias</span>
 			    </button>
@@ -85,11 +85,14 @@
 					<li><a class="menu-item" href="#">Fala Gestor</a></li>
 					<li><a class="menu-item" href="#">Eventos</a></li>
 				</ul>
+
 			</nav>
 		</div>
 	</div>
-	<div class="mega-menu dropdown-menu dropdown-menu-start" aria-labelledby="navbarsPrincipal" id="navbarsPrincipal">
-dddd
+	<div class="mega-menu collapse shadow-sm border" aria-labelledby="navbarsPrincipal" id="navbarsPrincipal">
+		<div class="container-xxl">
+		dddd
+		</div>
 	</div>
 	<main class="container-xxl">
 		<div class="row mt-3 mb-3">
