Alinhamento e margens dos comunicados

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			</nav>
 		</div>
 	</div>
-	<div class="mega-menu collapse shadow-sm border" aria-labelledby="navbarsPrincipal" id="navbarsPrincipal">
+	<div class="mega-menu collapse navbar-collapse shadow-sm border" aria-labelledby="navbarsPrincipal" id="navbarsPrincipal">
 		<div class="container-xxl">
 		dddd
 		</div>
@@ -97,8 +97,8 @@
 	<main class="container-xxl">
 		<div class="row mt-3 mb-3">
 			<!-- Carousel - Inicio-->
-			<div class="col-12 col-md-9 destaque">
-				<div id="carouselDestaque" class="carousel slide" data-bs-ride="carousel">
+			<div class="col-12 col-md-9 destaque mb-3">
+				<div id="carouselDestaque" class="carousel slide rounded shadow-sm" data-bs-ride="carousel">
 				  <div class="carousel-indicators">
 				    <button type="button" data-bs-target="#carouselDestaque" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 				    <button type="button" data-bs-target="#carouselDestaque" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -128,16 +128,20 @@
 			<!-- Carousel - Fim-->
 
 			<!-- Comunicados - Início -->
-			<div class="col-12 col-md-3 rounded comunicados bg-light shadow-sm p-3">
-				<h2>Comunicados</h2>
+			<div class="col-12 col-md-3">
+				<div class="row g-0 bg-light border rounded shadow-sm p-3 comunicados">
+					<div class="col-12">
+						<h2>Comunicados</h2>
 
-				<div class="comunicado-thumbnail mb-1">
-					<a class="link-comunicado" href="#">
-						<img src="img/comunicado-saude.jpg">
-					</a>
+						<div class="comunicado-thumbnail mb-1">
+							<a class="link-comunicado" href="#">
+								<img src="img/comunicado-saude.jpg">
+							</a>
+						</div>
+
+						<a href="#" class="ver-todos">Ver todos</a>
+					</div>
 				</div>
-
-				<a href="#" class="ver-todos">Ver todos</a>
 
 			</div>
 			<!-- Comunicados - Fim -->
