Ajuste de imagens do slider

--- a/index.html
+++ b/index.html
@@ -67,7 +67,13 @@
 				</div>
 			</div>
 		</div>
+		
 	</header>
+	<div class="search shadow-sm border collapse">
+		<div class="container-xxl">
+			Busca
+		</div>
+	</div>
 	<div class="menu-horizontal">
 		<div class="container-xxl">
 			 <nav class="navbar navbar-light nav-principal">
@@ -109,7 +115,7 @@
 				      <img src="img/banner-destaque.jpg" class="d-block w-100 border rounded shadow-sm" alt="...">
 				    </div>
 				    <div class="carousel-item">
-				      <img src="img/banner-destaque.jpg" class="d-block w-100 border rounded shadow-sm" alt="...">
+				      <img src="img/slide2.jpg" class="d-block w-100 border rounded shadow-sm" alt="...">
 				    </div>
 				    <div class="carousel-item">
 				      <img src="img/banner-destaque.jpg" class="d-block w-100 border rounded shadow-sm" alt="...">
@@ -280,37 +286,53 @@
 			<h2>Especial Saúde</h2>
 
 			<div class="col-6 col-md-3 p-3 text-center">
-				<img src="img/sms-pergunta.png">
-				<h3 class="text-center">SMS Pergunta</h3>
+				<a href="#" class="link-especial-saude">
+					<img src="img/sms-pergunta.png">
+					<h3 class="text-center">SMS Pergunta</h3>
+				</a>
 			</div>
 			<div class="col-6 col-md-3 p-3 text-center">
-				<img src="img/educacao-permanente.png">
-				<h3 class="text-center">Educação Permanente</h3>
+				<a href="#" class="link-especial-saude">
+					<img src="img/educacao-permanente.png">
+					<h3 class="text-center">Educação Permanente</h3>
+				</a>
 			</div>
 			<div class="col-6 col-md-3 p-3 text-center">
-				<img src="img/boas-praticas.png">
-				<h3 class="text-center">Boas Práticas</h3>
+				<a href="#" class="link-especial-saude">
+					<img src="img/boas-praticas.png">
+					<h3 class="text-center">Boas Práticas</h3>
+				</a>
 			</div>
 			<div class="col-6 col-md-3 p-3 text-center">
-				<img src="img/boato-ou-fato.png">
-				<h3 class="text-center">Boato ou Fato</h3>
+				<a href="#" class="link-especial-saude">
+					<img src="img/boato-ou-fato.png">
+					<h3 class="text-center">Boato ou Fato</h3>
+				</a>
 			</div>
 
 			<div class="col-6 col-md-3 p-3 text-center">
-				<img src="img/sms-na-midia.png">
-				<h3 class="text-center">SMS na Mídia</h3>
+				<a href="#" class="link-especial-saude">
+					<img src="img/sms-na-midia.png">
+					<h3 class="text-center">SMS na Mídia</h3>
+				</a>
 			</div>
 			<div class="col-6 col-md-3 p-3 text-center">
-				<img src="img/conta-pra-gente.png">
-				<h3 class="text-center">Conta pra Gente</h3>
+				<a href="#" class="link-especial-saude">
+					<img src="img/conta-pra-gente.png">
+					<h3 class="text-center">Conta pra Gente</h3>
+				</a>
 			</div>
 			<div class="col-6 col-md-3 p-3 text-center">
-				<img src="img/cuide-se-tambem.png">
-				<h3 class="text-center">Cuide-se também</h3>
+				<a href="#" class="link-especial-saude">
+					<img src="img/cuide-se-tambem.png">
+					<h3 class="text-center">Cuide-se também</h3>
+				</a>
 			</div>
 			<div class="col-6 col-md-3 p-3 text-center">
-				<img src="img/dose-cultural.png" class="mx-auto">
-				<h3 class="text-center">Dose Cultural</h3>
+				<a href="#" class="link-especial-saude">
+					<img src="img/dose-cultural.png" class="mx-auto">
+					<h3 class="text-center">Dose Cultural</h3>
+				</a>
 			</div>
 		</div>
 		<!-- Especial Saúde - Fim -->
