Criação de Tabs

--- a/index.html
+++ b/index.html
@@ -95,9 +95,43 @@
 			</nav>
 		</div>
 	</div>
-	<div class="mega-menu collapse navbar-collapse shadow-sm border" aria-labelledby="navbarsPrincipal" id="navbarsPrincipal">
+	<div class="mega-menu collapsefff navbar-collapse shadow-sm border" aria-labelledby="navbarsPrincipal" id="navbarsPrincipal">
 		<div class="container-xxl">
-		dddd
+		<ul class="nav nav-tabs">
+			<li class="nav-item col-md-15">
+				<a class="nav-link active" data-bs-toggle="tab" aria-controls="">Secretaria-executiva de Atenção Básica, Especialidades e Vigilância em Saúde</a>
+				<ul class="menu-level-1">
+					<li>Vigilância em Saúde (Covisa)
+						<ul class="menu-level-2">
+							<li class="col-12 col-md-15">Vigilância Epidemiológica</li>
+							<li class="col-12 col-md-15">Vigilância de Zoonoses</li>
+							<li class="col-12 col-md-15">Vigilância Sanitária</li>
+							<li class="col-12 col-md-15">Vigilância em Saúde do Trabalhador</li>
+							<li class="col-12 col-md-15">Vigilância em Saúde Ambiental</li>
+							<li class="col-12 col-md-15">Programa de Imunização</li>
+						</ul>
+					</li>
+					<li>Coordenadoria de IST/AIDS
+						<ul class="menu-level-2">
+							<li class="col-12 col-md-15">Administrativo</li>
+							<li class="col-12 col-md-15">Articulação</li>
+							<li class="col-12 col-md-15">Assistência</li>
+							<li class="col-12 col-md-15">Comunicação</li>
+							<li class="col-12 col-md-15">Coordenação</li>
+							<li class="col-12 col-md-15">Desenvolvimento Científico</li>
+							<li class="col-12 col-md-15">Informação e Vigilância</li>
+							<li class="col-12 col-md-15">Logística</li>
+							<li class="col-12 col-md-15">Planejamento</li>
+							<li class="col-12 col-md-15">Prevenção</li>
+						</ul>
+					</li>
+					<li>Atenção Básica </li>
+				</ul>
+			</li>
+			<li class="nav-item col-md-15">Secretaria-executiva de Atenção Hospitalar</li>
+			<li class="nav-item col-md-15">Secretaria-executiva de Gestão Administrativa e Integrada</li>
+			<li class="nav-item col-md-15">Secretaria-executiva de Regulação Monitoramento, Avaliação e Parcerias</li>
+			<li class="nav-item col-md-15">Coordenadoria Jurídica (Cojur)</li>
 		</div>
 	</div>
 	<main class="container-xxl">
