Tabs mega menu - Formatação

--- a/index.html
+++ b/index.html
@@ -95,43 +95,53 @@
 			</nav>
 		</div>
 	</div>
-	<div class="mega-menu collapsefff navbar-collapse shadow-sm border" aria-labelledby="navbarsPrincipal" id="navbarsPrincipal">
+	<div class="mega-menu collapse navbar-collapse shadow-sm border" aria-labelledby="navbarsPrincipal" id="navbarsPrincipal">
 		<div class="container-xxl">
-		<ul class="nav nav-tabs">
-			<li class="nav-item col-md-15">
-				<a class="nav-link active" data-bs-toggle="tab" aria-controls="">Secretaria-executiva de Atenção Básica, Especialidades e Vigilância em Saúde</a>
-				<ul class="menu-level-1">
-					<li>Vigilância em Saúde (Covisa)
-						<ul class="menu-level-2">
-							<li class="col-12 col-md-15">Vigilância Epidemiológica</li>
-							<li class="col-12 col-md-15">Vigilância de Zoonoses</li>
-							<li class="col-12 col-md-15">Vigilância Sanitária</li>
-							<li class="col-12 col-md-15">Vigilância em Saúde do Trabalhador</li>
-							<li class="col-12 col-md-15">Vigilância em Saúde Ambiental</li>
-							<li class="col-12 col-md-15">Programa de Imunização</li>
-						</ul>
-					</li>
-					<li>Coordenadoria de IST/AIDS
-						<ul class="menu-level-2">
-							<li class="col-12 col-md-15">Administrativo</li>
-							<li class="col-12 col-md-15">Articulação</li>
-							<li class="col-12 col-md-15">Assistência</li>
-							<li class="col-12 col-md-15">Comunicação</li>
-							<li class="col-12 col-md-15">Coordenação</li>
-							<li class="col-12 col-md-15">Desenvolvimento Científico</li>
-							<li class="col-12 col-md-15">Informação e Vigilância</li>
-							<li class="col-12 col-md-15">Logística</li>
-							<li class="col-12 col-md-15">Planejamento</li>
-							<li class="col-12 col-md-15">Prevenção</li>
-						</ul>
-					</li>
-					<li>Atenção Básica </li>
-				</ul>
-			</li>
-			<li class="nav-item col-md-15">Secretaria-executiva de Atenção Hospitalar</li>
-			<li class="nav-item col-md-15">Secretaria-executiva de Gestão Administrativa e Integrada</li>
-			<li class="nav-item col-md-15">Secretaria-executiva de Regulação Monitoramento, Avaliação e Parcerias</li>
-			<li class="nav-item col-md-15">Coordenadoria Jurídica (Cojur)</li>
+			<nav>
+				<div class="nav nav-tabs" role="tablist">
+				    <button class="col-12 col-md-15 g-0 nav-link active" data-bs-toggle="tab" data-bs-target=".nav-basica" type="button" role="tab" aria-controls="nav-basica" aria-selected="true">Secretaria-executiva de Atenção Básica, Especialidades e Vigilância em Saúde</button>
+				    <button class="col-12 col-md-15 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-hospitalar" type="button" role="tab" aria-controls="nav-hospitalar" aria-selected="false">Secretaria-executiva de Atenção Hospitalar</button>
+				    <button class="col-12 col-md-15 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-administrativa" type="button" role="tab" aria-controls="nav-administrativa" aria-selected="false">Secretaria-executiva de Gestão Administrativa e Integrada</button>
+				    <button class="col-12 col-md-15 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-monitoramento" type="button" role="tab" aria-controls="nav-monitoramento" aria-selected="false">Secretaria-executiva de Regulação Monitoramento, Avaliação e Parcerias</button>
+				    <button class="col-12 col-md-15 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-cojur" type="button" role="tab" aria-controls="nav-cojur" aria-selected="false">Coordenadoria Jurídica (Cojur)</button>
+				</div>
+			</nav>
+			<div class="tab-content">
+				<div class="tab-pane fade show active nav-basica" role="tabpanel" aria-labelledby="nav-basica-tab">
+					<ul class="menu-level-1">
+						<li>Vigilância em Saúde (Covisa)
+							<ul class="row menu-level-2">
+								<li class="col-12 col-md-2">Vigilância Epidemiológica</li>
+								<li class="col-12 col-md-2">Vigilância de Zoonoses</li>
+								<li class="col-12 col-md-2">Vigilância Sanitária</li>
+								<li class="col-12 col-md-2">Vigilância em Saúde do Trabalhador</li>
+								<li class="col-12 col-md-2">Vigilância em Saúde Ambiental</li>
+								<li class="col-12 col-md-2">Programa de Imunização</li>
+							</ul>
+						</li>
+						<li>Coordenadoria de IST/AIDS
+							<ul class="row menu-level-2">
+								<li class="col-12 col-md-2">Administrativo</li>
+								<li class="col-12 col-md-2">Articulação</li>
+								<li class="col-12 col-md-2">Assistência</li>
+								<li class="col-12 col-md-2">Comunicação</li>
+								<li class="col-12 col-md-2">Coordenação</li>
+								<li class="col-12 col-md-2">Desenvolvimento Científico</li>
+								<li class="col-12 col-md-2">Informação e Vigilância</li>
+								<li class="col-12 col-md-2">Logística</li>
+								<li class="col-12 col-md-2">Planejamento</li>
+								<li class="col-12 col-md-2">Prevenção</li>
+							</ul>
+						</li>
+						<li>Atenção Básica
+						</li>
+					</ul>
+				</div>
+				<div class="tab-pane fade nav-hospitalar" role="tabpanel" aria-labelledby="nav-hospitalar-tab">2</div>
+				<div class="tab-pane fade nav-administrativa" role="tabpanel" aria-labelledby="nav-administrativa-tab">3</div>
+				<div class="tab-pane fade nav-monitoramento" role="tabpanel" aria-labelledby="nav-monitoramento-tab">4</div>
+				<div class="tab-pane fade nav-cojur" role="tabpanel" aria-labelledby="nav-cojur-tab">5</div>
+			</div>
 		</div>
 	</div>
 	<main class="container-xxl">
