Conversão de imagens para SVG

--- a/index.html
+++ b/index.html
@@ -76,21 +76,29 @@
 	</div>
 	<div class="menu-horizontal">
 		<div class="container-xxl">
-			 <nav class="navbar navbar-light nav-principal">
-		    	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Mega Menu">
-			        <span class="navbar-toggler-icon"></span>
-			        <span class="navbar-toggler-name">Navegue pelas secretarias</span>
+			 <nav class="navbar navbar-light navbar-expand-lg nav-principal">
+		    	
+
+			    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			    	<span class="navbar-toggler-icon"></span>
 			    </button>
 
-			    <ul class="text-small">
-					<li><a class="menu-item" href="#">Home</a></li>
-					<li><a class="menu-item" href="#">Comunicados</a></li>
-					<li><a class="menu-item" href="#">Boletins</a></li>
-					<li><a class="menu-item" href="#">Nossos programas</a></li>
-					<li><a class="menu-item" href="#">Especial Saúde</a></li>
-					<li><a class="menu-item" href="#">Fala Gestor</a></li>
-					<li><a class="menu-item" href="#">Eventos</a></li>
-				</ul>
+			    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+			    	<button class="navbar-toggler d-none d-lg-flex" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Mega Menu">
+				        <span class="navbar-toggler-icon"></span>
+				        <span class="navbar-toggler-name">Navegue pelas secretarias</span>
+				    </button>
+
+				    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item"><a class="menu-item" href="#">Home</a></li>
+						<li class="nav-item"><a class="menu-item" href="#">Comunicados</a></li>
+						<li class="nav-item"><a class="menu-item" href="#">Boletins</a></li>
+						<li class="nav-item"><a class="menu-item" href="#">Nossos programas</a></li>
+						<li class="nav-item"><a class="menu-item" href="#">Especial Saúde</a></li>
+						<li class="nav-item"><a class="menu-item" href="#">Fala Gestor</a></li>
+						<li class="nav-item"><a class="menu-item" href="#">Eventos</a></li>
+					</ul>
+				</div>
 
 			</nav>
 		</div>
@@ -320,61 +328,61 @@
 
 			</div>
 
-			<a href="https://www.youtube.com/c/saudeprefsp" target="_blank" class="ver-todos">Assista todos os vídeos no nosso canal</a>
+			<a href="https://www.youtube.com/c/saudeprefsp" target="_blank" class="ver-todos">Assista a todos os vídeos no nosso canal</a>
 
 		</div>
 		<!-- Youtube - Fim -->
 
 		<!-- Especial Saúde - Início -->
 		<div class="row mt-3 mb-3 p-3 g-0 bg-light border rounded shadow-sm especial-saude">
-			<h2>Especial Saúde</h2>
+			<h2>+ Saúde para você</h2>
 
 			<div class="col-6 col-md-3 p-3 text-center">
 				<a href="#" class="link-especial-saude">
-					<img src="img/sms-pergunta.png">
+					<img src="img/sms-pergunta.svg">
 					<h3 class="text-center">SMS Pergunta</h3>
 				</a>
 			</div>
 			<div class="col-6 col-md-3 p-3 text-center">
 				<a href="#" class="link-especial-saude">
-					<img src="img/educacao-permanente.png">
+					<img src="img/educacao-permanente.svg">
 					<h3 class="text-center">Educação Permanente</h3>
 				</a>
 			</div>
 			<div class="col-6 col-md-3 p-3 text-center">
 				<a href="#" class="link-especial-saude">
-					<img src="img/boas-praticas.png">
+					<img src="img/boas-praticas.svg">
 					<h3 class="text-center">Boas Práticas</h3>
 				</a>
 			</div>
 			<div class="col-6 col-md-3 p-3 text-center">
 				<a href="#" class="link-especial-saude">
-					<img src="img/boato-ou-fato.png">
+					<img src="img/boato-ou-fato.svg">
 					<h3 class="text-center">Boato ou Fato</h3>
 				</a>
 			</div>
 
 			<div class="col-6 col-md-3 p-3 text-center">
 				<a href="#" class="link-especial-saude">
-					<img src="img/sms-na-midia.png">
+					<img src="img/sms-na-midia.svg">
 					<h3 class="text-center">SMS na Mídia</h3>
 				</a>
 			</div>
 			<div class="col-6 col-md-3 p-3 text-center">
 				<a href="#" class="link-especial-saude">
-					<img src="img/conta-pra-gente.png">
+					<img src="img/conta-pra-gente.svg">
 					<h3 class="text-center">Conta pra Gente</h3>
 				</a>
 			</div>
 			<div class="col-6 col-md-3 p-3 text-center">
 				<a href="#" class="link-especial-saude">
-					<img src="img/cuide-se-tambem.png">
+					<img src="img/cuide-se-tambem.svg">
 					<h3 class="text-center">Cuide-se também</h3>
 				</a>
 			</div>
 			<div class="col-6 col-md-3 p-3 text-center">
 				<a href="#" class="link-especial-saude">
-					<img src="img/dose-cultural.png" class="mx-auto">
+					<img src="img/dose-cultural.svg" class="mx-auto">
 					<h3 class="text-center">Dose Cultural</h3>
 				</a>
 			</div>
@@ -387,7 +395,7 @@
 
 			<div class="col-12 col-md-6 mb-3 mt-3 fala-gestor">
 
-				<h2><img src="img/fala-gestor.png">Fala Gestor</h2>
+				<h2><img src="img/fala-gestor.svg">Fala Gestor</h2>
 
 				<div class="row bg-light border rounded shadow-sm g-0">
 					<div class="col-12 col-md-5 p-3">
