Criação do slider para eventos

--- a/index.html
+++ b/index.html
@@ -420,12 +420,23 @@
 				<h2><img src="img/eventos.png">Eventos</h2>
 
 				<div class="row bg-light border rounded shadow-sm g-0">
-					<div class="col-12 col-md-6 p-3">
-						<h3>Nome do Evento</h3>
-						<p class="data">12/12/2022</p>
-						<p class="local">Local do Evento</p>
-						<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining </p>
-						<a href="#" class="ver-mais">Ver detalhes do evento</a>
+					<div class="col-12 col-md-6 p-3 carousel slide" data-bs-ride="carousel">
+						<div class="carousel-inner">
+							<div class="carousel-item evento-detalhes active">
+								<h3>Nome do Evento 1</h3>
+								<p class="data">12/12/2022</p>
+								<p class="local">Local do Evento</p>
+								<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+								<a href="#" class="ver-mais">Ver detalhes do evento</a>
+							</div>
+							<div class="carousel-item evento-detalhes">
+								<h3>Nome do Evento 2</h3>
+								<p class="data">12/12/2022</p>
+								<p class="local">Local do Evento</p>
+								<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+								<a href="#" class="ver-mais">Ver detalhes do evento</a>
+							</div>
+						</div>
 					</div>
 
 					<div class="col-12 col-md-6 p-3">
