--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
 				        <span class="navbar-toggler-name">Navegue pelas secretarias</span>
 				    </button>
 
-				    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				    <ul class="navbar-nav mb-2 mb-lg-0">
 						<li class="nav-item"><a class="menu-item" href="#">Home</a></li>
 						<li class="nav-item"><a class="menu-item" href="#">Comunicados</a></li>
 						<li class="nav-item"><a class="menu-item" href="#">Boletins</a></li>
 						<li class="nav-item"><a class="menu-item" href="#">Nossos programas</a></li>
-						<li class="nav-item"><a class="menu-item" href="#">Especial Saúde</a></li>
-						<li class="nav-item"><a class="menu-item" href="#">Fala Gestor</a></li>
+						<li class="nav-item"><a class="menu-item" href="#">+ Saúde para você</a></li>
+						<li class="nav-item"><a class="menu-item" href="#">Fala, gestor!</a></li>
 						<li class="nav-item"><a class="menu-item" href="#">Eventos</a></li>
 					</ul>
 				</div>
@@ -107,11 +107,10 @@
 		<div class="container-xxl">
 			<nav>
 				<div class="nav nav-tabs" role="tablist">
-				    <button class="col-12 col-md-15 g-0 nav-link active" data-bs-toggle="tab" data-bs-target=".nav-basica" type="button" role="tab" aria-controls="nav-basica" aria-selected="true">Secretaria-executiva de Atenção Básica, Especialidades e Vigilância em Saúde</button>
-				    <button class="col-12 col-md-15 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-hospitalar" type="button" role="tab" aria-controls="nav-hospitalar" aria-selected="false">Secretaria-executiva de Atenção Hospitalar</button>
-				    <button class="col-12 col-md-15 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-administrativa" type="button" role="tab" aria-controls="nav-administrativa" aria-selected="false">Secretaria-executiva de Gestão Administrativa e Integrada</button>
-				    <button class="col-12 col-md-15 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-monitoramento" type="button" role="tab" aria-controls="nav-monitoramento" aria-selected="false">Secretaria-executiva de Regulação Monitoramento, Avaliação e Parcerias</button>
-				    <button class="col-12 col-md-15 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-cojur" type="button" role="tab" aria-controls="nav-cojur" aria-selected="false">Coordenadoria Jurídica (Cojur)</button>
+				    <button class="col-12 col-md-3 g-0 nav-link active" data-bs-toggle="tab" data-bs-target=".nav-basica" type="button" role="tab" aria-controls="nav-basica" aria-selected="true">Secretaria-executiva de Atenção Básica, Especialidades e Vigilância em Saúde</button>
+				    <button class="col-12 col-md-3 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-hospitalar" type="button" role="tab" aria-controls="nav-hospitalar" aria-selected="false">Secretaria-executiva de Atenção Hospitalar</button>
+				    <button class="col-12 col-md-3 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-administrativa" type="button" role="tab" aria-controls="nav-administrativa" aria-selected="false">Secretaria-executiva de Gestão Administrativa</button>
+				    <button class="col-12 col-md-3 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-monitoramento" type="button" role="tab" aria-controls="nav-monitoramento" aria-selected="false">Secretaria-executiva de Regulação Monitoramento, Avaliação e Parcerias</button>
 				</div>
 			</nav>
 			<div class="tab-content">
@@ -141,7 +140,14 @@
 								<li class="col-12 col-md-2">Prevenção</li>
 							</ul>
 						</li>
+						<li>Coordenadoria Jurídica (Cojur)</li>
 						<li>Atenção Básica
+							<ul class="row menu-level-2">
+								<li class="col-12 col-md-2">Divisão de Ciclos de Vida</li>
+								<li class="col-12 col-md-2">Divisão de Saúde Mental e Tabagismo</li>
+								<li class="col-12 col-md-2">Divisão de Assistência Farmacêutica e Laboratorial de Enfermagem e Insumos Estratégicos</li>
+								<li class="col-12 col-md-2">Divisão de Promoção à Saúde</li>
+							</ul>
 						</li>
 					</ul>
 				</div>
@@ -371,7 +377,7 @@
 			<div class="col-6 col-md-3 p-3 text-center">
 				<a href="#" class="link-especial-saude">
 					<img src="img/conta-pra-gente.svg">
-					<h3 class="text-center">Conta pra Gente</h3>
+					<h3 class="text-center">Conta para a gente</h3>
 				</a>
 			</div>
 			<div class="col-6 col-md-3 p-3 text-center">
@@ -395,7 +401,7 @@
 
 			<div class="col-12 col-md-6 mb-3 mt-3 fala-gestor">
 
-				<h2><img src="img/fala-gestor.svg">Fala Gestor</h2>
+				<h2><img src="img/fala-gestor.svg">Fala, gestor!</h2>
 
 				<div class="row bg-light border rounded shadow-sm g-0">
 					<div class="col-12 col-md-5 p-3">
