--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			</nav>
 		</div>
 	</div>
-	<div class="mega-menu collapse navbar-collapse shadow-sm border" aria-labelledby="navbarsPrincipal" id="navbarsPrincipal">
+	<div class="mega-menu collapsef navbar-collapse shadow-sm border" aria-labelledby="navbarsPrincipal" id="navbarsPrincipal">
 		<div class="container-xxl">
 			<nav>
 				<div class="nav nav-tabs" role="tablist">
@@ -143,10 +143,32 @@
 						<li>Coordenadoria Jurídica (Cojur)</li>
 						<li>Atenção Básica
 							<ul class="row menu-level-2">
-								<li class="col-12 col-md-2">Divisão de Ciclos de Vida</li>
+								<li class="col-12 col-md-2">Divisão de Ciclos de Vida
+									<ul class="row menu-level-3">
+										<li>Área Técnica de Saúde da Mulher</li>
+										<li>Área Técnica de Saúde da Criança e do Adolescente</li>
+										<li>Área Técnica de Saúde da Pessoa Idosa</li>
+									</ul>
+								</li>
 								<li class="col-12 col-md-2">Divisão de Saúde Mental e Tabagismo</li>
-								<li class="col-12 col-md-2">Divisão de Assistência Farmacêutica e Laboratorial de Enfermagem e Insumos Estratégicos</li>
-								<li class="col-12 col-md-2">Divisão de Promoção à Saúde</li>
+								<li class="col-12 col-md-2">Divisão de Assistência Farmacêutica e Laboratorial de Enfermagem e Insumos Estratégicos
+									<ul class="row menu-level-3">
+										<li>Assistência Farmacêutica</li>
+										<li>Assistência Laboratorial</li>
+										<li>Enfermagem</li>
+									</ul>
+								</li>
+								<li class="col-12 col-md-2">Divisão de Promoção à Saúde
+									<ul class="row menu-level-3">
+										<li>Atenção Integral à Saúde da Pessoa em Situação de Violência</li>
+										<li>Saúde Nutricional</li>
+										<li>Programa Academia da Saúde</li>
+										<li>Residência Multiprofissional em PICS</li>
+										<li>Programa ambientes Verdes e Saudáveis</li>
+										<li>Atenção Integral à Saúde da População Negra</li>
+										<li>Práticas Integrativas e Complementares em Saúde - PICS</li>
+									</ul>
+								</li>
 							</ul>
 						</li>
 					</ul>
