--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			</nav>
 		</div>
 	</div>
-	<div class="mega-menu collapsef navbar-collapse shadow-sm border" aria-labelledby="navbarsPrincipal" id="navbarsPrincipal">
+	<div class="mega-menu collapse navbar-collapse shadow-sm border" aria-labelledby="navbarsPrincipal" id="navbarsPrincipal">
 		<div class="container-xxl">
 			<nav>
 				<div class="nav nav-tabs" role="tablist">
